--- a/Configuration-Server/servicio-cliente.yml
+++ b/Configuration-Server/servicio-cliente.yml
@@ -1,7 +1,15 @@
 # Spring Boot configuration
 spring:
+  profiles:
+    active: development
+  # Security configuration
+  security:
+    user:
+      name: user
+      password: user
   # Database
   datasource:
+    driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/db_ventas
     username: postgres
     password: 1525
