--- a/Configuration-Server/servicio-cliente.yml
+++ b/Configuration-Server/servicio-cliente.yml
@@ -16,7 +16,7 @@ spring:
   # JPA properties
   jpa:
     hibernate:
-      ddl-auto: create # When you launch the application for the first time - switch "none" at "create"
+      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
     show-sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -32,3 +32,10 @@ logging:
 # Server configuration
 server:
   port: 8092 #set your port
+  error:
+    include-message: always
+    include-binding-errors: always
+eureka:
+  client:
+    serviceUrl:
+        defaultZone: http://localhost:8099/eureka/
